--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 logging.level.guru=debug
 server.port=8082
+
+# DEFAULTS FOR:
+# docker run -it --rm -p 8161:8161 -p 61616:61616 vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
