Fix issues with Jackson JSON/Object Mapping. 1) Event object needs No args ctor. 2) OffsetDateTime requires custom mapping. Hibernate lazy init means beerRepository.getOne(uuid) failing to retrieve beer correctly.  Define listener method as transactional to workaround (Hack!?)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 logging.level.guru=debug
 server.port=8082
 
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.show-sql=true
+
 # DEFAULTS FOR:
 # docker run -it --rm -p 8161:8161 -p 61616:61616 vromero/activemq-artemis
 spring.artemis.user=artemis
