--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ server.port=8082
 # docker run -it --rm -p 8161:8161 -p 61616:61616 vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+spring.zipkin.baseurl=http://localhost:9411
+
