--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ server.port=8082
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.zipkin.baseurl=http://localhost:9411
+spring.zipkin.enabled=false
 
