--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.artemis.password=simetraehcapa
 
 spring.zipkin.enabled=false
 
+eureka.client.serviceUrl.defaultZone=http://netflix:eureka@localhost:8761/eureka
