--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.artemis.password=simetraehcapa
 spring.zipkin.enabled=false
 
 eureka.client.serviceUrl.defaultZone=http://netflix:eureka@localhost:8761/eureka
+
+spring.security.user.name=good
+spring.security.user.password=beer
