Re-enable json format logging for uploading to Zipkin. Switch docker image prefix to personal docker account.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
     <name>mssc-beer-inventory-service</name>
     <description>MSSC Beer Inventory Service</description>
 
+    <properties>
+        <docker.image.prefix>gadb2</docker.image.prefix>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
