--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=beer-inventory-service
 logging.level.guru=debug
+logging.level.org.springframework.cloud.commons.util.InetUtils=trace
+#logging.level.com.netflix.discovery=trace
 server.port=8082
 
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 #spring.jpa.show-sql=true
 
 # DEFAULTS FOR:
-# docker run -it --rm -p 8161:8161 -p 61616:61616 vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
@@ -18,3 +19,5 @@ eureka.client.serviceUrl.defaultZone=http://netflix:eureka@localhost:8761/eureka
 
 spring.security.user.name=good
 spring.security.user.password=beer
+
+spring.cloud.inetutils.timeout-seconds=100
